feat: update cancel registration to use class_id and include registration status in get all classes
