# pkg/models/classes.go
@@ -37,6 +37,7 @@ type Class struct {
 
 	UserQuestionAnswers    []UserQuestionAnswer    `gorm:"foreignKey:ClassID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"user_question_answers"`
 	UserSubQuestionAnswers []UserSubQuestionAnswer `gorm:"foreignKey:ClassID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"user_sub_question_answers"`
+	UserClassRegistrations []UserClassRegistration `gorm:"foreignKey:ClassID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"user_class_registrations"`
 
 	Attendances []Attendance `gorm:"foreignKey:ClassID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"attendances"`
 }
